# BookCoop

./: Docker-compose.yml  README.md  setup.bat  setup.sh
backend/: Cargo.toml
backend/db/migrations/: 0001_books_table.sql  0002_authors_table.sql  0003_book_issues_table.sql  0004_admin_table.sql
backend/migrations/: 0001_book_table.sql  0002_author_table.sql  0003_book_author.sql  0003_category_table.sql  0003_stock_book_table.sql  0004_category_table.sql  0004_inventory_table.sql  0004_publisher_table.sql  0005_book_author_category_table.sql  0005_inventory_table.sql  0005_stock_table.sql
backend/src/: main.rs
backend/src/application/: mod.rs
backend/src/application/domen/: author.rs  book.rs  dashboard.rs  mod.rs
backend/src/application/repositories/: admin_repository.rs  author_repository.rs  book_issues_repository.rs  book_repository.rs  mod.rs
backend/src/application/service/: admin_service.rs  author_service.rs  book_issues_service.rs  book_service.rs  delete_authors.rs  delete_books.rs  form_service.rs  get_authors.rs  get_books.rs  get_dashboard.rs  mod.rs  post_authors.rs  post_books.rs  put_authors.rs  put_books.rs  shutdown_service.rs
backend/src/db/: db_config.rs
backend/src/domain/: admin.rs  author.rs  book.rs  book_issues.rs  mod.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/db/: connection.rs
backend/src/infrastructure/log/: logger_init.rs  mod.rs
backend/src/infrastructure/persistence/: mod.rs  sql_admin_repository.rs  sql_author_repository.rs  (+2 more)
backend/src/presentation/: mod.rs
backend/src/repositories/: author_repository.rs  book_author_category_repository.rs  book_repository.rs  category_repository.rs  inventory_repository.rs  mod.rs
backend/src/routes/: author_routes.rs  mod.rs
backend/src/struct_entity/: author.rs  book.rs  book_author_category.rs  category.rs  inventory.rs  mod.rs
(+59 files in other folders)
