[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = "0.8.0"
chrono = "0.4.42"
dotenvy = "0.15"
rust_decimal = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
