[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
axum-server = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rust_decimal = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["timeout", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
